[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-sensor-grf-estimation"
version = "0.1.0"
description = "Multi-sensor ground reaction force estimation with consumer smartwatch IMU data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Parvin Ghaffarzadeh" }
]
keywords = [
  "ground-reaction-force",
  "wearable-sensors",
  "smartwatch",
  "biomechanics",
  "pytorch",
  "explainable-ai"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "flake8>=6.0",
  "pytest>=7.0",
  "twine>=4.0"
]
notebooks = [
  "jupyter>=1.0",
  "seaborn>=0.12"
]

[project.urls]
Homepage = "https://github.com/ParvinGhaffarzadeh/multi-sensor-grf-estimation"
Repository = "https://github.com/ParvinGhaffarzadeh/multi-sensor-grf-estimation"
Issues = "https://github.com/ParvinGhaffarzadeh/multi-sensor-grf-estimation/issues"
Dataset = "https://doi.org/10.5281/zenodo.17376717"

[tool.setuptools]
py-modules = [
  "enhanced_uasf_model_final",
  "enhanced_uasf_loso_training_final_calib97_FIXED"
]

[tool.setuptools.packages.find]
include = ["experiments", "experiments.*", "model", "model.*", "visualization", "visualization.*", "xai", "xai.*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
